# Quant

./: .gitignore  README.md  requirements.txt
agent/: CMakeLists.txt  Dockerfile
agent/include/: Data.hpp  Environment.h  Environment.hpp  RNN.hpp
agent/src/: Main.cpp
analysis/: exploratory.ipynb
data/: VIXCLS.csv
model/: data.py  environment.py  main.py  model.py  rnn.py
