cmake_minimum_required(VERSION 3.25 FATAL_ERROR)

SET(PROJECTNAME Quant)

PROJECT(${PROJECTNAME})

FILE(GLOB_RECURSE PROJECT_SOURCES ${CMAKE_SOURCE_DIR}/src/*.cpp)
FILE(GLOB_RECURSE PROJECT_HEADERS ${CMAKE_SOURCE_DIR}/include/*.hpp)
FILE(GLOB_RECURSE THIRD_PARTY_SOURCES ${CMAKE_SOURCE_DIR}/third-party/lib/*.cpp)
FILE(GLOB_RECURSE THIRD_PARTY_C_HEADERS ${CMAKE_SOURCE_DIR}/third-party/include/*.h)
FILE(GLOB_RECURSE THIRD_PARTY_CXX_HEADERS ${CMAKE_SOURCE_DIR}/third-party/include/*.hpp)

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}/include/
    ${CMAKE_SOURCE_DIR}/third-party/include/
)

ADD_EXECUTABLE(${PROJECTNAME}
        ${PROJECT_SOURCES}
        ${PROJECT_HEADERS}
        ${THIRD_PARTY_C_HEADERS}
        ${THIRD_PARTY_CXX_HEADERS}
        ${THIRD_PARTY_SOURCES}
)

SET(CMAKE_CXX_STANDARD 23)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

TARGET_COMPILE_OPTIONS(${PROJECTNAME} PUBLIC -std=c++23 -Wall -g )